# pilapse

./: .gitignore  README.md  build.sh  pyproject.toml  setup.cfg
.github/workflows/: publish-to-test-pypi.yml
pilapse/: __main__.py  image_saver.py  index.html  ip_finder.py  scheduler.py  server.py
