[tool.poetry]
name = "pilapse"
version = "0.0.7"
description = "Raspberry Pi time-lapse service"
authors = ["Alex McGunn <mcgunn@oo2.be>"]

license = "Apache 2.0"

readme = "README.md"

homepage = "https://github.com/yix/pilapse"
repository = "https://github.com/yix/pilapse"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"