[metadata]
name = pilapse
version = 0.0.5
url = https://github.com/yix/pilapse
author = Alex McGunn
author_email = mcgunn@oo2.be
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License, Version 2.0 (Apache-2.0)
    Operating System :: OS Independent
description = Raspberry Pi time-lapse service
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = pilapse
install_requires =
  Pillow; python_version == "3.8"

[options.entry_points]
console_scripts =
    pilapse = pilapse:__main__.run